argo-rollouts/istio/rollouts-demo/1.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: rollouts-demo
